--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "star-automated-test",
+  "name": "@star/automated-test",
   "version": "1.0.1",
   "description": "",
   "main": "src/index.js",
