--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@star/automated-test",
+  "name": "star-automated-test",
   "version": "1.0.1",
   "description": "",
   "main": "src/index.js",
@@ -9,6 +9,9 @@
   "keywords": [],
   "author": "reinskywalker",
   "license": "ISC",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  },
   "dependencies": {
     "crypto-js": "^4.2.0"
   }
