--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "reinskywalker",
   "license": "ISC",
   "dependencies": {
-    "crypto-js": "^4.2.0"
+    "crypto-js": "^4.2.0",
+    "supertest": "^6.3.4"
   }
 }
