--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "crypto-js": "^4.2.0",
+    "json-to-graphql-query": "^2.2.5",
     "supertest": "^6.3.4"
   }
 }
